--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -178,6 +178,23 @@
         transform: scale(1.03);
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
+    @media only screen and (max-width: 768px) {
+    .all-beaches-section {
+        gap: 10px;
+    }
+
+    #beaches-container {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .card {
+        width: 100%;
+
+    }
+
+}
+
 </style>
 {% endblock %}
 
