--- a/templates/manage_reports.html
+++ b/templates/manage_reports.html
@@ -18,6 +18,7 @@ block content %}
           <th>Beach</th>
           <th>Date</th>
           <th>Enterococci (per 100ml)</th>
+          <th>Category</th>
           <th>Actions</th>
         </tr>
       </thead>
@@ -27,6 +28,7 @@ block content %}
           <td>{{ report.beach }}</td>
           <td>{{ report.date }}</td>
           <td>{{ report.enterococcicount }}</td>
+          <td>{{ report.category }}</td>
           <td>
             <a
               href="{{ url_for('edit_report', report_id=report.id) }}"
