--- a/templates/add_report.html
+++ b/templates/add_report.html
@@ -26,6 +26,16 @@
         required
       />
     </div>
+    <div class="form-group mt-3"></div>
+      <label for="category">Category</label>
+      <input
+        type="text"
+        class="form-control"
+        id="category"
+        name="category"
+        required
+      />
+    </div>
     <button type="submit" class="btn btn-success mt-4">Add Report</button>
     <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary mt-4"
       >Cancel</a
