--- a/templates/impact.html
+++ b/templates/impact.html
@@ -34,7 +34,7 @@
 {% block content %}
 <main>
   <div class="container text-center">
-    <h1 class="mb-4">Understanding the economic effects economic of poor Water Quality</h1>
+    <h1 class="mb-4">Understanding the economic effects  of poor Water Quality</h1>
 
     <!-- Infographic Section -->
     <section class="infographic-section position-relative">
