--- a/templates/manage_community_reports.html
+++ b/templates/manage_community_reports.html
@@ -15,6 +15,7 @@
   <a
     href="{{ url_for('export_community_reports') }}"
     class="btn btn-primary mb-3"
+    onclick="return confirm('Are you sure you want to download the community reports?');"
     >Export Reports</a
   >
 </div>
